improved invite ux
still need to clean out old invite code

--- a/resumes/static/resumes/grouppage.css
+++ b/resumes/static/resumes/grouppage.css
@@ -61,3 +61,8 @@ div.dt-container .dt-paging .dt-paging-button {
     display: inline-block; /* Needed for margin to have effect */
     margin-bottom: 15px; /* Put space between button and members area */
 }
+
+#inviteUsersSearchBar {
+    margin-right: 0px;
+    width: 100%
+}
