--- a/resumes/templates/resumes/upload.html
+++ b/resumes/templates/resumes/upload.html
@@ -71,7 +71,7 @@
             {% endfor %}
         </div>
 
-        <button type="submit" class="blue-btn">Submit</button>
+        <button type="submit" class="darkblue-btn">Submit</button>
     </form>
 
 {% endblock %}
