--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 
         <!-- Could replace this with img logo later -->
         <a class="nav-element" href="{% url 'index' %}">ratemyresume</a>
-        <a class="nav-element" href="{% url 'index' %}">Resumes</a> <!-- Later these 2 will link to separate pages-->
+        <a class="nav-element" href="{% url 'index' %}">Resumes</a>
         <a class="nav-element" href="{% url 'groups' %}">Groups</a>
 
         {% if user.is_authenticated %}
@@ -46,7 +46,7 @@
         {% endif %}
 
         <a href="javascript:void(0);" class="nav-element icon" onclick="toggleNavbar()">
-            <svg width="25px" height="25px" fill="#000000" viewBox="0 0 52 52" data-name="Layer 1" id="Layer_1" xmlns="http://www.w3.org/2000/svg">
+            <svg width="25px" height="25px" fill="#ffffff" viewBox="0 0 52 52" data-name="Layer 1" id="Layer_1" xmlns="http://www.w3.org/2000/svg">
                 <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                 <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                 <g id="SVGRepo_iconCarrier">
