--- a/resumes/static/resumes/grouppage.css
+++ b/resumes/static/resumes/grouppage.css
@@ -1,10 +1,11 @@
 .area {
+    background-color: white;
     border: 1px solid #cccdcf;
-    border-radius: 5px;
+    margin-bottom: 20px;
 }
 
 .area-header {
-    background-color: #cccdcf;
+    padding: 5px;
 }
 .area-header:hover{
     cursor: pointer;
