--- a/resumes/static/resumes/grouppage.css
+++ b/resumes/static/resumes/grouppage.css
@@ -51,7 +51,7 @@ div.dt-container .dt-paging .dt-paging-button {
 }
 
 .header-quick-info {
-    font-style: italic;
+    font-weight: bold;
 }
 
 #group-icon {
