--- a/resumes/templates/resumes/index.html
+++ b/resumes/templates/resumes/index.html
@@ -59,7 +59,7 @@
         <button class="darkblue-btn search-btn" type="submit">Search</button>
     </form>
 
-    <a class="darkblue-btn" href="{% url 'upload' %}">Upload a resume</a>
+    <a class="darkblue-btn" href="{% url 'upload' %}">Upload</a>
 </div>
 
 <h2 id="results-header" class="sub-header"></h2>
