--- a/resumes/templates/resumes/upload.html
+++ b/resumes/templates/resumes/upload.html
@@ -11,7 +11,7 @@
 
     <div class="warning-box">
         <span class="warning-symbol">&#9888;</span>
-        <p class="warning-text">Before uploading a resume, please remove any identifying information such as your name, email, phone number, and address.</p>
+        <p class="warning-text">Do not include any identifying information (name, email, phone number, and address) in a public resume.</p>
     </div>
 
     <form method="post" enctype="multipart/form-data">
