--- a/templates/resume_card.html
+++ b/templates/resume_card.html
@@ -45,5 +45,5 @@ script src="% static 'resume_card.js' %"
         <a href="{% url 'user' user_id %}" class="username-link">{{ user }} </a>
     </div>
 
-    <div class="resume-card-text">{{ created_at|naturaltime }}</div>
+    <div class="resume-card-text txt-sm">{{ created_at|naturaltime }}</div>
 </div>
