edit delete buttons on details page

--- a/resumes/templates/resumes/details.html
+++ b/resumes/templates/resumes/details.html
@@ -117,5 +117,11 @@
         {% endif %}
     </div>
 
+    {% if request.user == resume.user %}
+        <h2 class="sub-header">Actions</h2>
+        <a class="darkblue-btn" href="{% url 'edit_resume' resume.id %}">Edit</a>
+        <button class="red-btn">Delete</button>
+    {% endif %}
+
 
 {% endblock %}
