--- a/resumes/templates/resumes/edit_resume.html
+++ b/resumes/templates/resumes/edit_resume.html
@@ -54,7 +54,7 @@
             {% endfor %}
         </div>
 
-        <button type="submit" class="darkblue-btn">Submit</button>
+        <button type="submit" class="darkblue-btn">Save</button>
     </form>
 
 {% endblock %}
