changed where files are stored

--- a/resumes/templates/resumes/details.html
+++ b/resumes/templates/resumes/details.html
@@ -120,7 +120,7 @@
     {% if request.user == resume.user %}
         <h2 class="sub-header">Actions</h2>
         <a class="darkblue-btn" href="{% url 'edit_resume' resume.id %}">Edit</a>
-        <button class="red-btn">Delete</button>
+        <button class="red-btn">Delete (TODO)</button>
     {% endif %}
 
 
