confirm delete modal works everywhere

--- a/templates/resume_delete_modal.html
+++ b/templates/resume_delete_modal.html
@@ -8,7 +8,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Are you sure you want to delete this resume?</p>
+                <p>Are you sure you want to permanently delete this resume?</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="darkblue-btn" data-dismiss="modal">Cancel</button>
